--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Header Styles */
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  min-height: 80px;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.header h3 {
+  margin-right: auto;
+  color: #FFF;
+  font-size: 2rem;
+}
+
+.header input {
+  font-size: 1rem;
+  padding: 10px;
+  border: 2px solid #000;
+  border-radius: 10px;
+}
+
+/* Content Styles Mobile */
+.content-main {
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.image {
+  height: 350px;
+  width: 310px;
+}
+
+.image-info {
+  margin-bottom: 2rem;
+  padding-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.image:hover {
+  opacity: 0.95;
+}
+
+
+
+/* Content Styles Desktop */
+@media (min-width: 800px) {
+  .header {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .content-main {
+    padding: 3rem;
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .image {
+    height: 400px;
+    width: 360px;
+  }
 }
